proyecto listo para entregar js

--- a/index.html
+++ b/index.html
@@ -30,52 +30,12 @@
 
     <!-- Catálogo de productos -->
         <section class="catalogo">
-            <article class="producto">
-                <img src="./img/iphone 11.jpg" alt="iPhone 11">
-                <h3>iPhone 11</h3>
-                <p class="precio">$299.000</p>
-                <button class="btn-agregar" onclick="agregarAlCarrito(1, 'iPhone 11', 299.000)">Agregar al carrito</button>
-            </article>
-            <article class="producto">
-                <img src="./img/samsung galaxy a51.jpg" alt="Samsung Galaxy A51">
-                <h3>Samsung Galaxy A51</h3>
-                <p class="precio">$399.999</p>
-                <button class="btn-agregar" onclick="agregarAlCarrito(2, 'Samsung Galaxy A51', 399.999)">Agregar al carrito</button>
-            </article>
-            <article class="producto">
-                <img src="./img/redmi note 10.jpg" alt="Redmi Note 10">
-                <h3>Redmi Note 10</h3>
-                <p class="precio">$499.999</p>
-                <button class="btn-agregar" onclick="agregarAlCarrito(3, 'Redmi Note 10', 499.999)">Agregar al carrito</button>
-            </article>
-            <article class="producto">
-                <img src="./img/motog9plus.webp" alt="Moto G9 Plus">
-                <h3>Moto G9 Plus</h3>
-                <p class="precio">$359.999</p>
-                <button class="btn-agregar" onclick="agregarAlCarrito(4, 'Moto G9 Plus', 359.999)">Agregar al carrito</button>
-            </article>
-            <article class="producto">
-                <img src="./img/nord plus 2.png" alt="OnePlus Nord 2">
-                <h3>OnePlus Nord 2</h3>
-                <p class="precio">$279.999</p>
-                <button class="btn-agregar" onclick="agregarAlCarrito(5, 'OnePlus Nord 2', 279.999)">Agregar al carrito</button>
-            </article>
-            <article class="producto">
-                <img src="./img/iphone xr.jpg" alt="iPhone XR">
-                <h3>iPhone XR</h3>
-                <p class="precio">$449.999</p>
-                <button class="btn-agregar" onclick="agregarAlCarrito(6, 'iPhone XR', 449.999)">Agregar al carrito</button>
-            </article>
-            <article class="producto">
-                <img src="./img/galaxy s10.jpg" alt="Galaxy S10 Lite">
-                <h3>Galaxy S10 Lite</h3>
-                <p class="precio">$389.999</p>
-                <button class="btn-agregar" onclick="agregarAlCarrito(7, 'Galaxy S10 Lite', 389.999)">Agregar al carrito</button>
-            </article>
+          
         </section>
     </main>
     <footer class="footer">
         <p>&copy; 2025 Tienda de Celulares Reparados. Todos los derechos reservados.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
