--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carrito de Compras - tienda</title>
   <link rel="stylesheet" href="./css/style.css" />
-  <script defer src="./js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script defer src="./js/carrito.js"></script>
 </head>
 <body>
 
@@ -45,8 +46,23 @@
       </table>
 
       <div class="carrito-total">
+        <form id="form-compra" class="form-compra">
+          <h3>Datos para la entrega</h3>
+          <label for="nombre">Nombre completo:</label>
+          <input type="text" id="nombre" name="nombre" value="Juan Pérez" required />
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" value="juan.perez@email.com" required />
+
+          <label for="telefono">Teléfono:</label>
+          <input type="tel" id="telefono" name="telefono" value="1234567890" required />
+
+          <label for="direccion">Dirección de envío:</label>
+          <input type="text" id="direccion" name="direccion" value="Calle Falsa 123" required />
+
+          <button type="submit" class="btn-agregar">Confirmar Datos y Finalizar Compra</button>
+        </form>
         <p>Total: <span id="total-carrito">$0</span></p>
-        <button class="btn-agregar">Finalizar Compra</button>
       </div>
     </section>
     <script src="./js/carrito.js"></script>
